<resources>
    <string name="app_name">Popular Movies</string>

    //Name for settings in actionbar
    <string name="action_settings">Settings</string>

    //For title in the settings menu to sort movies
    <string name="sort">Sort By</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="overview">Overview:</string>
    <string name="release">Release:</string>
    <string name="votes">Votes:&#160;&#160;&#160;&#160;</string>
    <string name="ratings">Ratings:</string>
    <string name="reviews">REVIEWS</string>
    <string name="favourites">Favourites</string>
    <string name="trailers">Trailers</string>
    <string name="noInternet">No Internet Connection</string>
</resources>
